--- a/Food5(PyTorch)(Final).ipynb
+++ b/Food5(PyTorch)(Final).ipynb
@@ -257,7 +257,7 @@
     {
       "cell_type": "code",
       "source": [
-        "model = torchvision.models.mobilenet_v2(pretrained=True)\n",
+        "model = torchvision.models.mobilenet_v2(pretrained=False)\n",
         "model.to(device)"
       ],
       "metadata": {
